--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -7730,6 +7730,11 @@ footer.page-footer {
   }
 }
 
+.custom-control {
+  
+  color: $theme-color-1;
+}
+
 #app-container {
   &.sub-hidden .footer-content,
   &.menu-sub-hidden .footer-content,
